# irbis-fs

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  build.rs
src/: lib.rs
sub/compat/: Cargo.toml
sub/fs/: Cargo.toml
sub/fs/src/: connection.rs  lib.rs  types.rs
sub/fs/src/client/: config.rs  connection.rs  eventloop.rs  mod.rs
sub/fs/src/proto/: mod.rs
sub/fs/src/proto/auth/: client.rs  message.rs  mod.rs  server.rs
sub/fs/src/proto/content/: actions.rs  client.rs  message.rs  mod.rs  server.rs  state.rs  task.rs
sub/fs/src/server/: config.rs  connection.rs  database.rs  eventloop.rs  mod.rs
sub/protocol/: Cargo.toml
sub/protocol/src/: lib.rs  message.rs  serde.rs  stream.rs  workflow.rs
