[package]
name = "fs"
version = "0.0.7"
authors = ["alexander.irbis <irbis.labs@gmail.com>"]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
publish = false


[target.'cfg(unix)'.dependencies]
libc = "*"
unix_socket = "0.4.3"


[dependencies]
blake2-rfc      = { version = "*" }
clippy          = { version = "0.0.*", optional = true }
log             = { version = "*" }
net2            = { version = "0.2.2", features = ["nightly"] }
nix             = "*"
rand            = "0.3"
slice_as_array  = "1.0.0"
time            = "0.1"
trace           = { version = "*", optional = true }
uuid            = { version = "0.2", features = ["serde", "v4"] }

compat          = { path = "../compat" }
protocol        = { path = "../protocol" }

[dev-dependencies]
data-encoding   = "1.1.0"
